--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -3,7 +3,7 @@
 }
 
 body {
-  background: #006;
+  background: white;
   color: white;
   font-family: Arial, Helvetica, sans-serif;
 }
@@ -26,7 +26,7 @@ body {
   input,
   button {
     padding: 10px;
-    border: solid 1px white;
+    border: solid 1px #006;
     border-radius: 20px;
   }
   label,
@@ -67,19 +67,21 @@ body {
   }
 
   .card {
+    background-color: #006;
     border-radius: 20px;
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
     justify-content: center;
-    padding: 10px;
     margin: 10px;
-    min-width: 200px;
+    padding: 20px;
     h3,
     p {
+      color: white;
       font-size: 1rem;
       margin-bottom: 5px;
-      margin-top: 5px;
+      margin-top: 0;
+      text-align: center;
     }
   }
   .type {
@@ -120,4 +122,11 @@ body {
       background-color: #8b0000; // Dark red, contrasts well with white
     }
   }
+}
+
+svg {
+  padding-top: 20px;
+  fill: white;
+  height: 120px;
+  width: 120px;
 }
