--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -8,45 +8,9 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-.form-wrapper {
-  width: 600px;
-  form {
-    display: flex;
-    flex-direction: column;
-    margin-top: 50px;
-    margin-bottom: 50px;
-  }
-  label,
-  input,
-  button {
-    font-size: 1rem;
-    margin-top: 10px;
-    margin-bottom: 10px;
-  }
-  input,
-  button {
-    padding: 10px;
-    border: solid 1px #006;
-    border-radius: 20px;
-  }
-  label,
-  button {
-    text-transform: uppercase;
-  }
-  label {
-    margin-bottom: 0;
-  }
-  input {
-    margin-top: 5px;
-    &::placeholder {
-      font-size: 1rem;
-    }
-  }
-  p {
-    margin-top: 0;
-    margin-bottom: 0;
-    margin-left: 20px;
-  }
+h1,
+p {
+  color: #006;
 }
 
 .main {
@@ -71,10 +35,13 @@ body {
     border-radius: 20px;
     display: flex;
     flex-direction: column;
-    flex-wrap: wrap;
-    justify-content: center;
+    align-items: center; // Align items to the center to prevent stretching
+    justify-content: flex-start; // Align content to the top
+    width: 175px; // Define a specific width for all cards
+    height: 175px; // Ensure the height adjusts to content
     margin: 10px;
     padding: 20px;
+
     h3,
     p {
       color: white;
@@ -84,44 +51,6 @@ body {
       text-align: center;
     }
   }
-  .type {
-    &-address {
-      background-color: #b22222; // Firebrick, contrasts well with white
-    }
-    &-consumer_good {
-      background-color: #d2691e; // Chocolate, contrasts well with white
-    }
-    &-date {
-      background-color: #e60000; // Red, contrasts well with white
-    }
-    &-event {
-      background-color: #cda200; // Darkened gold, contrasts well with white
-    }
-    &-location {
-      background-color: #e65100; // Darker orange, contrasts well with white
-    }
-    &-number {
-      background-color: #008000; // Darker green, contrasts well with white
-    }
-    &-organization {
-      background-color: #008b8b; // Darkened turquoise, contrasts well with white
-    }
-    &-person {
-      background-color: #c71585; // Deep pink (Magenta), contrasts well with white
-    }
-    &-phone_number {
-      background-color: #104e8b; // Darker blue, contrasts well with white
-    }
-    &-price {
-      background-color: #556b2f; // Dark Olive Green, contrasts well with white
-    }
-    &-work_of_art {
-      background-color: #9932cc; // Dark orchid, contrasts well with white
-    }
-    &-other {
-      background-color: #8b0000; // Dark red, contrasts well with white
-    }
-  }
 }
 
 svg {
@@ -129,4 +58,17 @@ svg {
   fill: white;
   height: 120px;
   width: 120px;
+}
+
+.header-section,
+.footer-section {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  flex-wrap: wrap; // Change to wrap to allow items to move to the next line if space runs out
+  padding: 20px;
+  margin-bottom: 20px;
+}
+.children .card {
+  transform: scale(0.9);
 }
