--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,3 +1,5 @@
+$brandColor: #006;
+
 * {
   box-sizing: border-box;
 }
@@ -10,7 +12,7 @@ body {
 
 h1,
 p {
-  color: #006;
+  color: $brandColor;
 }
 
 .main {
@@ -31,7 +33,7 @@ p {
   }
 
   .card {
-    background-color: #006;
+    background-color: $brandColor;
     border-radius: 20px;
     display: flex;
     flex-direction: column;
